[tool.poetry]
name = "cognitebootcamp"
version = "0.1.0"
description = ""
authors = ["Guus van der Sluijs <guus.van.der.sluijs@piab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cognite-toolkit = "^0.3.2"
pip-system-certs = "^4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
